--- a/VLESS-TCP-TLS-proxy protocol/nginx.conf
+++ b/VLESS-TCP-TLS-proxy protocol/nginx.conf
@@ -44,7 +44,7 @@ http {
 
         charset utf-8;
 
-        access_log logs/yourserver_8001.access.log proxy;
+        access_log logs/yourserver.access.log proxy;
 
         location / {
             root /var/www/html;
