--- a/VLESS-TCP-TLS/nginx.conf
+++ b/VLESS-TCP-TLS/nginx.conf
@@ -39,7 +39,7 @@ http {
 
         charset utf-8;
 
-        access_log logs/yourserver_8001.access.log main;
+        access_log logs/yourserver.access.log main;
 
         location / {
             root /var/www/html;
